--- a/css/style.css
+++ b/css/style.css
@@ -1517,6 +1517,7 @@ iframe#youtubevideo {
     border-bottom: 1px dashed var(--dark-greay);
 }
 
+
 .how_it_inner .text-center .btn_block {
     margin-top: 35px;
 }
@@ -4200,25 +4201,25 @@ text-align: center;
 color: #4caf50;
 }
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 10; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 10; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0.5); /* Black with opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.5);
 }
 
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-    max-width: 600px; /* Limiting the maximum width */
+    width: 80%;
+    max-width: 600px;
 }
 
 /* Close button */
@@ -4247,4 +4248,7 @@ color: #4caf50;
 
 #error-modal p {
     color: red;
+}
+.openModalBtn{
+    cursor:pointer;
 }
